<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart Note Record</string>
    <string name="action_settings">Settings</string>
	<string name="label_name">Name: </string>
	<string name="label_note">Note: </string>
	<string name="label_date">Date: </string>
	<string name="label_details">Details: </string>
	<string name="label_priority">Priority: </string>
	<string name="address">Address</string>
	<string name="savebutton">Save Note</string>
	<string name="menuitem_add_note">Add Note</string>
	<string name="menuitem_edit_note">Edit Note</string>
	<string name="menuitem_delete_note">Delete Note</string>
	<string name="errorTitle">Error</string>
	<string name="errorMessage">Please Fill The Form</string>
	<string name="errorButton">Ok</string>
	<string name="button_cancel">Cancel</string>
	<string name="button_delete">Delete</string>
	<string name="confirmMessage">Are you sure? Click delete</string>
	<string name="confirmTitle">Confirm Deletion</string>
	<string name="pick">Pick A Date</string>
	
</resources>
