<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:background="#696969"  >
	<TableLayout
	    android:stretchColumns="1"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" >
	    <TableRow 
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content">
	    	<TextView android:id="@+id/nameLableTextView"
	    	    style="@style/NoteLabelTextView"
	    	    android:text="@string/label_name"
	    	    android:textColor="#fff"></TextView>
	    	<TextView
	    	    android:id="@+id/nameTextView"
	    	    style="@style/NoteTextView"> </TextView>
	    </TableRow>
	    <TableRow 
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content">
	    	<TextView android:id="@+id/nameLabelTextView"
	    	    style="@style/NoteLabelTextView"
	    	    android:text="@string/label_note"
	    	    android:textColor="#fff"></TextView>
	    	<TextView android:id="@+id/noteTextView"
	    	    style="@style/NoteTextView"></TextView>
	    </TableRow>
	    <TableRow 
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content">
	    	<TextView android:id="@+id/dateLabelTextView"
	    	    style="@style/NoteLabelTextView"
	    	    android:text="@string/label_date"
	    	    android:textColor="#fff"></TextView>
	    	<TextView android:id="@+id/dateTextView"
	    	    style="@style/NoteTextView"></TextView>
	    </TableRow>
	    <TableRow 
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content">
	    	<TextView android:id="@+id/detailsLabelTextView"
	    	    style="@style/NoteLabelTextView"
	    	    android:text="@string/label_details"
	    	    android:textColor="#fff"></TextView>
	    	<TextView android:id="@+id/detailsTextView"
	    	    style="@style/NoteTextView"></TextView>
	    </TableRow>
	    <TableRow 
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content">
	    	<TextView android:id="@+id/priorityLabelTextView"
	    	    style="@style/NoteLabelTextView"
	    	    android:text="@string/label_priority"
	    	    android:textColor="#fff"></TextView>
	    	<TextView android:id="@+id/priorityTextView"
	    	    style="@style/NoteTextView"></TextView>
	    </TableRow>
	    
	</TableLayout>

</ScrollView>
